# -*- mode: org -*-
* v0.8.0    UNRELEASED

- When returning to a prefix whose ~refresh-suffixes~ slot is non-nil,
  its suffixes are now re-initialized.  #327

- Added documentation for ~inapt-if*~ slots to manual.  179545a6

- ~transient-args~ and ~transient-scope~ now both take a prefix command or
  a list of prefix commands as argument.

- Added new generic function ~transient-prefix-value~, giving finer
  control over how the value returned by ~transient-args~ is determined.

- Added support for implementing ~transient-init-scope~ methods for
  prefix classes.

- ~transient-setup-buffer-hook~ is now run later to allow overriding
  more default settings.

- While the minibuffer is in use, the menu buffer is now hidden by
  default.  Customize ~transient-hide-during-minibuffer-read~ if you
  prefer the old default.

- Further refinements to when the size of the menu window is fixed.

Bug fixes:

- Fixes some menu navigation edge-cases.

* v0.7.9    2024-11-04

Bug fixes:

- Fixed a recent regression in ~transient-suffix-object~.  #325

- The height of the transient window was fixed even it used the full
  frame height.  5478d4e6

* v0.7.8    2024-11-02

- Additional potential mistakes in menu definitions are now detected.
  bbda5bb6, 8873c300

- Added new (and still experimental) ~environment~ prefix slot, which
  can be used to, for example, implement a cache to be used while
  refreshing the menu.  05c011b8

- When navigating through the menu using the keyboard or hovering a
  suffix command with the mouse, information about the command is now
  shown in the echo area or using a tooltip.  #282

Bug fixes:

- When the command that exits a transient uses the minibuffer,
  ~transient-current-*~ variables were not immediately reset to
  ~nil~. #323

- Key sequences with three or more events broke
  ~transient-suffix-object~.  #324

* v0.7.7    2024-10-04

Bug fix:

- Fix a regression introduced by the previous commit, which broke